scraping from wiki, starting to handle data and built-in string function

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,16 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nhm_df = pd.read_excel(\"nhm/data/nhm-dataset.xlsx\").fillna(\"\")\n",
-    "nhm_df[\"source\"] = \"nhm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "thoughtco_df = pd.read_excel(\"thoughtco/data/thoughtco-dataset.xlsx\").fillna(\"\")\n",
     "thoughtco_df[\"source\"] = \"thoughtco\""
    ]
@@ -38,8 +28,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# display(thoughtco_df)\n",
-    "thoughtco_df.columns"
+    "def _pronunciation(dino:str) -> str:\n",
+    "    if \" (\" in dino and \"), \" in dino: return dino.split(\" (\")[1].split(\"), \")[0]\n",
+    "    elif \"nounced \" in dino:\n",
+    "        dino = dino.split(\"nounced \")[1]\n",
+    "        return dino.split(\";\")[0] if \";\" in dino else dino"
    ]
   },
   {
@@ -48,8 +41,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# display(nhm_df)\n",
-    "nhm_df.columns"
+    "def _meaning(dino:str) -> str:\n",
+    "    if \"), \" in dino: return dino.split(\"), \")[1]\n",
+    "    elif \")\" in dino: return dino.split(\")\")[0].split(\" (\")[1].replace(\"\\\"\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _name(dino:str) -> str:\n",
+    "    dino = dino.split(\" \")\n",
+    "    try: return dino[0] if \"(\" in dino[1] else \"-\".join(dino[:2])\n",
+    "    except IndexError: return dino[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for fun in [_pronunciation, _meaning, _name]:\n",
+    "    thoughtco_df[fun.__name__[1:]] = thoughtco_df[\"name\"].apply(fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nhm_df = pd.read_excel(\"nhm/data/nhm-dataset.xlsx\").fillna(\"\")\n",
+    "nhm_df[\"source\"] = \"nhm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "for c in [ \"found in\", \"named by\"]:\n",
+    "    plt.figure(figsize=(25, 1))\n",
+    "    nhm_df[c].apply(lambda d: d.split(\", \")).explode().value_counts().tail(10).plot(kind='bar', figsize=(25, 6))\n",
+    "    plt.show()"
    ]
   }
  ],
