--- a/main.ipynb
+++ b/main.ipynb
@@ -6,10 +6,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.output_parsers import PydanticOutputParser\n",
+    "from langchain_google_genai import GoogleGenerativeAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "from models.dinosaur import Dinosaur\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "from os import getenv\n",
+    "\n",
+    "from lxml import html\n",
+    "import requests as rq\n",
     "import pandas as pd\n",
     "\n",
-    "pd.options.display.max_columns = None\n",
-    "pd.options.display.max_rows = None"
+    "load_dotenv()\n",
+    "\n",
+    "NHM = {\n",
+    "    \"url\": \"https://www.nhm.ac.uk/discover/dino-directory/name/name-az-all/gallery.html\",\n",
+    "    \"xpath\": \"//*[@id='content']/div[2]/div[2]/ul/li/a\",\n",
+    "    \"domain\": \"https://www.nhm.ac.uk/\"\n",
+    "}\n",
+    "\n",
+    "# THOUGHTCO = {\n",
+    "#     \"url\": \"https://www.thoughtco.com/dinosaurs-a-to-z-1093748\",\n",
+    "#     \"xpath\": \"//*[@id='mntl-sc-page_1-0']/p\"\n",
+    "# }\n",
+    "\n",
+    "WIKIPEDIA = {\n",
+    "    \"url\": \"https://en.wikipedia.org/wiki/list_of_dinosaur_genera\",\n",
+    "    \"xpath\": \"//*[@id='mw-content-text']/div[1]/table/following::ul/li/a\",\n",
+    "    \"domain\": \"https://en.wikipedia.org/\"\n",
+    "}\n",
+    "\n",
+    "def extract(url:str, xpath:str, **kwargs) -> list:\n",
+    "    return [ (d.text_content().lower(), d.attrib[\"href\"]) for d in html.fromstring(rq.get(url).content).xpath(xpath) ]\n",
+    "\n",
+    "LLM = GoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=getenv(\"GOOGLE_API_KEY\"), temperature=0)"
    ]
   },
   {
@@ -18,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thoughtco_df = pd.read_excel(\"thoughtco/data/thoughtco-dataset.xlsx\").fillna(\"\")\n",
-    "thoughtco_df[\"source\"] = \"thoughtco\""
+    "prompt = PromptTemplate(template=\"Get all the data related to this dinosaur: {URL}\\n{FORMAT}\", input_variables=[\"URL\", \"FORMAT\"])\n",
+    "chain = prompt | LLM | (parser := PydanticOutputParser(pydantic_object=Dinosaur))"
    ]
   },
   {
@@ -28,73 +60,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _pronunciation(dino:str) -> str:\n",
-    "    if \" (\" in dino and \"), \" in dino: return dino.split(\" (\")[1].split(\"), \")[0]\n",
-    "    elif \"nounced \" in dino:\n",
-    "        dino = dino.split(\"nounced \")[1]\n",
-    "        return dino.split(\";\")[0] if \";\" in dino else dino"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _meaning(dino:str) -> str:\n",
-    "    if \"), \" in dino: return dino.split(\"), \")[1]\n",
-    "    elif \")\" in dino: return dino.split(\")\")[0].split(\" (\")[1].replace(\"\\\"\", \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _name(dino:str) -> str:\n",
-    "    dino = dino.split(\" \")\n",
-    "    try: return dino[0] if \"(\" in dino[1] else \"-\".join(dino[:2])\n",
-    "    except IndexError: return dino[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for fun in [_pronunciation, _meaning, _name]:\n",
-    "    thoughtco_df[fun.__name__[1:]] = thoughtco_df[\"name\"].apply(fun)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nhm_df = pd.read_excel(\"nhm/data/nhm-dataset.xlsx\").fillna(\"\")\n",
-    "nhm_df[\"source\"] = \"nhm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "for c in [ \"found in\", \"named by\"]:\n",
-    "    plt.figure(figsize=(25, 1))\n",
-    "    nhm_df[c].apply(lambda d: d.split(\", \")).explode().value_counts().tail(10).plot(kind='bar', figsize=(25, 6))\n",
-    "    plt.show()"
+    "def load(where:dict, how_many:int=10) -> None:\n",
+    "    dinolist = extract(**WIKIPEDIA)[:how_many]\n",
+    "\n",
+    "    def invoke(url:str):\n",
+    "        return chain.invoke({\"URL\": url, \"FORMAT\": parser.get_format_instructions()})\n",
+    "\n",
+    "    dinodf = pd.json_normalize([ invoke(where[\"domain\"] + d[-1]).model_dump() for d in dinolist ])\n",
+    "    dinodf.to_excel(\"data/dinos.xlsx\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,14 +87,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.13.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "47d59cec4c0883e0b373985bd923f149eff67b35653e9bb78b95a50e49db9672"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
