ask-to-data with pandas

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain_experimental.agents.agent_toolkits import create_pandas_dataframe_agent\n",
     "from langchain.output_parsers import PydanticOutputParser\n",
     "from langchain_google_genai import GoogleGenerativeAI\n",
     "from langchain.prompts import PromptTemplate\n",
@@ -60,14 +61,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load(where:dict, how_many:int=10) -> None:\n",
-    "    dinolist = extract(**WIKIPEDIA)[:how_many]\n",
+    "def load(where:dict, how_many:int=10) -> pd.DataFrame:\n",
+    "    dinolist = extract(**where)[:how_many]\n",
     "\n",
     "    def invoke(url:str):\n",
     "        return chain.invoke({\"URL\": url, \"FORMAT\": parser.get_format_instructions()})\n",
     "\n",
     "    dinodf = pd.json_normalize([ invoke(where[\"domain\"] + d[-1]).model_dump() for d in dinolist ])\n",
-    "    dinodf.to_excel(\"data/dinos.xlsx\")"
+    "    dinodf.to_csv(\"data/dinos.csv\")\n",
+    "    return dinodf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent = create_pandas_dataframe_agent(LLM, load(NHM, 12), verbose=True, allow_dangerous_code=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.invoke(\"which are the most common type of dinosaur?\")"
    ]
   }
  ],
